@@ -47,37 +47,35 @@
     <inceptionYear>2011</inceptionYear>
 
     <properties>
-        <java.version>8</java.version>
-        <owb.version>2.0.23</owb.version>
+        <java.version>17</java.version>
+        <owb.version>4.0.0-SNAPSHOT</owb.version>
+
         <!-- Weld profiles (in parent/code/pom.xml) override this version -->
-        <weld.version>1.1.34.Final</weld.version>
+        <weld.version>4.0.3.Final</weld.version>
 
         <!-- for cdictrl-openejb -->
-        <tomee.version>9.0.0-M7</tomee.version>
+        <tomee.version>9.0.0.RC1</tomee.version>
         <openejb.owb.version>${owb.version}</openejb.owb.version>
 
 
         <!-- testing stuff -->
         <junit.version>4.13.2</junit.version>
-        <arquillian.version>1.7.0.Alpha10</arquillian.version>
+        <arquillian.version>1.7.0.Alpha13</arquillian.version>
 
         <!-- JSF-2.0 implementations-->
-        <myfaces2.version>2.0.14</myfaces2.version>
-        <myfaces22.version>2.2.3</myfaces22.version>
-        <myfaces2.version.current>2.1.8</myfaces2.version.current>
+        <myfaces.version>4.0.0-RC4</myfaces.version>
+        <myfaces2.version.current>4.0.0-RC4</myfaces2.version.current>
+<!--
         <mojarra2.version>2.0.3-b03</mojarra2.version>
+-->
 
-        <tomcat.version>10.0.11</tomcat.version>
-
-        <!-- JSF-1.2 implementations-->
-        <myfaces1.version>1.2.8</myfaces1.version>
-        <mojarra1.version>1.2_14</mojarra1.version>
+        <tomcat.version>10.1.5</tomcat.version>
 
         <!-- used for some bytecode proxy stuff. Shaded in -->
-        <asm.version>9.1</asm.version>
+        <asm.version>9.4</asm.version>
 
-        <maven.jetty.plugin.version>7.1.5.v20100705</maven.jetty.plugin.version>
-        <maven.surefire.plugin.version>2.19.1</maven.surefire.plugin.version>
+
+        <maven.surefire.plugin.version>3.0.0-M4</maven.surefire.plugin.version>
         <maven.bundle.plugin.version>3.5.0</maven.bundle.plugin.version>
         <maven.jar.plugin.version>3.1.2</maven.jar.plugin.version>
         <maven.dependency.plugin.version>2.4</maven.dependency.plugin.version>
@@ -91,6 +89,7 @@
         <jacoco.version>0.7.4.201502262128</jacoco.version>
 
         <arquillian-weld.version>1.0.0.Final</arquillian-weld.version>
+        <arquillian-weld3.version>2.1.0.Final</arquillian-weld3.version>
 
         <!-- OSGi bundles properties -->
         <deltaspike.osgi.import.deltaspike.version>version="[$(version;==;${deltaspike.osgi.version.clean}),$(version;=+;${deltaspike.osgi.version.clean}))"</deltaspike.osgi.import.deltaspike.version>
@@ -122,37 +121,11 @@
         <deltaspike.osgi.provide.capability />
         <deltaspike.osgi.require.capability />
         <cdi.osgi.beans-managed />
-        <!-- validator related -->
-        <hibernate.validator.version>4.3.1.Final</hibernate.validator.version>
-        <bval.version>0.5</bval.version>
-        <bval1.version>1.1.2</bval1.version>
 
-        <!-- Versions of common dependencies within Weld profiles -->
-        <weld.el.api>2.2</weld.el.api>
-        <weld.sfl4j>1.7.2</weld.sfl4j>
     </properties>
 
     <profiles>
-        <profile>
-            <id>JBossArchive</id>
-            <repositories>
-                <repository>
-                    <id>JBoss-Archive</id>
-                    <name>JBoss Archive</name>
-                    <url>https://repository.jboss.org/nexus/content/groups/public</url>
-                </repository>
-            </repositories>
-        </profile>
-        <profile>
-            <id>JBossSnapshots</id>
-            <repositories>
-                <repository>
-                    <id>JBoss-Snapshots</id>
-                    <name>JBoss Snapshots</name>
-                    <url>https://repository.jboss.org/nexus/content/repositories/snapshots/</url>
-                </repository>
-            </repositories>
-        </profile>
+
 
         <profile>
             <id>coverage</id>
@@ -203,6 +176,29 @@
                         </executions>
                     </plugin>
                 </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>jdk17+</id>
+            <activation>
+                <jdk>[17,)</jdk>
+            </activation>
+            <build>
+                <pluginManagement>
+                    <plugins>
+                        <plugin>
+                            <groupId>org.apache.maven.plugins</groupId>
+                            <artifactId>maven-surefire-plugin</artifactId>
+                            <configuration>
+                                <argLine>
+                                    --add-opens java.base/java.lang=ALL-UNNAMED
+                                    --add-opens java.base/java.util=ALL-UNNAMED
+                                    --add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
+                                </argLine>
+                            </configuration>
+                        </plugin>
+                    </plugins>
+                </pluginManagement>
             </build>
         </profile>
     </profiles>
@@ -460,22 +456,6 @@
             </dependency>
 
 
-<!--
-            <dependency>
-                <groupId>org.apache.geronimo.specs</groupId>
-                <artifactId>geronimo-jpa_2.0_spec</artifactId>
-                <version>${geronimo-jpa-2.0-spec.version}</version>
-                <scope>provided</scope>
-            </dependency>
-
-            <dependency>
-                <groupId>org.apache.geronimo.specs</groupId>
-                <artifactId>geronimo-jta_1.1_spec</artifactId>
-                <version>${geronimo-jta-1.1-spec.version}</version>
-                <scope>provided</scope>
-            </dependency>
--->
-
             <dependency>
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-library</artifactId>
@@ -506,11 +486,18 @@
                 <scope>test</scope>
             </dependency>
 
-<!--
+            <!-- dependency for DELTASPIKE-113 -->
+            <dependency>
+                <groupId>javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.12.1.GA</version>
+                <scope>provided</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.apache.myfaces.core</groupId>
                 <artifactId>myfaces-api</artifactId>
-                <version>${myfaces22.version}</version>
+                <version>${myfaces.version}</version>
                 <scope>provided</scope>
                 <exclusions>
                     <exclusion>
@@ -523,14 +510,14 @@
             <dependency>
                 <groupId>org.apache.myfaces.core</groupId>
                 <artifactId>myfaces-impl</artifactId>
-                <version>${myfaces22.version}</version>
+                <version>${myfaces.version}</version>
                 <scope>provided</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.myfaces.core</groupId>
                 <artifactId>myfaces-impl-test</artifactId>
-                <version>${myfaces22.version}</version>
+                <version>${myfaces.version}</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -540,7 +527,6 @@
                 <version>1.0.6</version>
                 <scope>provided</scope>
             </dependency>
--->
 
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -630,14 +616,14 @@
                             <goal>run</goal>
                         </goals>
                         <configuration>
-                            <tasks>
+                            <target>
                                 <copy todir="${project.build.directory}/apidocs/META-INF">
                                     <fileset dir="${basedir}">
                                         <include name="LICENSE.txt" />
                                         <include name="NOTICE.txt" />
                                     </fileset>
                                 </copy>
-                            </tasks>
+                            </target>
                         </configuration>
                     </execution>
                     <execution>
@@ -647,12 +633,12 @@
                             <goal>run</goal>
                         </goals>
                         <configuration>
-                            <tasks>
+                            <target>
                                 <!-- Copy javadoc to another directory, to keep javadoc of previous versions on site -->
                                 <copy todir="${project.build.directory}/site/apidocs-${project.version}" failonerror="false">
                                     <fileset dir="${project.build.directory}/site/apidocs" />
                                 </copy>
-                            </tasks>
+                            </target>
                         </configuration>
                     </execution>
                 </executions>
@@ -707,7 +693,6 @@
             </plugin>
 
             <plugin>
-                <!-- Set compile source at 1.5, since the target JSF impl is 1.2 -->
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven.compiler.plugin.version}</version>
